
<!--When tested on API level 10,it is noted that the landscape layout is going out of the screen ,
    so made it scrollable. When tested on targeted API level 18 ,it fits in the screen as expected   -->

 <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android" 
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/method_text"/>
                
               
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="19sp"
                android:text="@string/times_text"/>
                

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

           <TextView
                android:id="@+id/textView_onCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"              
                android:text="@string/onCreate_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/EditText_onCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="9" 
                android:textSize="12sp"
                android:inputType="textNoSuggestions"/>
               
        </TableRow>

       <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_onRestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"               
                android:text="@string/onRestart_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/EditText_onRestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="9" 
                android:textSize="12sp"
                android:inputType="textNoSuggestions">

            
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_onStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="@string/onStart_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/EditText_onStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="9" 
                android:textSize="12sp"
                android:inputType="textNoSuggestions"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_onResume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"              
                android:text="@string/onResume_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/EditText_onResume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="9" 
                android:textSize="12sp"
                android:inputType="textNoSuggestions"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_onPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"               
                android:text="@string/onPause_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/EditText_onPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="9"
                android:textSize="12sp"
                android:inputType="textNoSuggestions" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:onClick="callReset"/>

</LinearLayout>
</ScrollView>